fix: make table content align to left

--- a/components/common/Table/Table.module.scss
+++ b/components/common/Table/Table.module.scss
@@ -7,7 +7,6 @@
 }
 
 .table {
-  width: 100%;
   height: 100%;
   overflow-x: auto;
   border-collapse: collapse;
@@ -38,7 +37,7 @@
   line-height: 16px;
   color: colors.$black;
   padding: 24px 24px 24px 0;
-  max-width: 160px;
+  max-width: 200px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -46,6 +45,11 @@
 
   &:first-child {
     padding-left: 24px;
+  }
+
+  &:last-child {
+    max-width: unset;
+    width: 100%;
   }
 }
 
