--- a/components/scores/scores-page/scoresPage.module.scss
+++ b/components/scores/scores-page/scoresPage.module.scss
@@ -28,6 +28,7 @@
 .viewLink {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 }
 
 .viewLinkArrow {
